<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textAlignment="center"
        android:textSize="16dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_label"
        android:textSize="16dp" />
    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_hint"
        android:textSize="16dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paterno_label"
        android:textSize="16dp" />
    <EditText
        android:id="@+id/editTextApPaterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellidoPaterno_hint"
        android:textSize="16dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/materno_label"
        android:textSize="16dp" />
    <EditText
        android:id="@+id/editTextApMaterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellidoMaterno_hint"
        android:textSize="16dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saludo"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salir" />
</LinearLayout>